--- a/SCOUTr/app/src/main/res/layout/content_main.xml
+++ b/SCOUTr/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,6 +8,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RecordDataActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="comcsse483.github.scoutr.MainActivity"
+    tools:showIn="@layout/app_bar_main"
+    android:id="@+id/fragment_container">
+
 
 </RelativeLayout>
