--- a/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="comcsse483.github.scoutr.fragments.SetUpNewTournamentFragment">
+    tools:context="comcsse483.github.scoutr.fragments.RecordDataFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
