--- a/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
@@ -4,10 +4,13 @@
     android:layout_height="match_parent"
     tools:context="comcsse483.github.scoutr.fragments.SetUpNewTournamentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.design.widget.TabLayout.SlidingTabStrip
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_gravity="center" />
 
 </FrameLayout>
