--- a/SCOUTr/app/src/main/res/layout/fragment_sync_data.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_sync_data.xml
@@ -7,7 +7,8 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center_horizontal|top">
+        android:layout_gravity="center_horizontal|top"
+        android:id="@+id/syncRadioGroup">
 
         <RadioButton
             android:layout_width="wrap_content"
