--- a/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
@@ -1,18 +1,9 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="comcsse483.github.scoutr.fragments.SetUpNewTournamentFragment">
+    tools:context="comcsse483.github.scoutr.fragments.SetUpNewTournamentFragment" />
 
-    <android.support.design.widget.TabLayout.SlidingTabStrip
-        android:id="@+id/sliding_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center" />
 
-</FrameLayout>
