--- a/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
@@ -4,10 +4,72 @@
     android:layout_height="match_parent"
     tools:context="comcsse483.github.scoutr.fragments.RecordDataFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/text_field_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/field_one"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/edit_field_one"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_field_one" />
+
+        <TextView
+            android:id="@+id/text_field_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_field_one"
+            android:text="@string/field_two"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/edit_field_two"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_field_two" />
+
+        <TextView
+            android:id="@+id/text_field_three"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_field_two"
+            android:text="@string/field_three"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/edit_field_three"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_field_three" />
+
+        <TextView
+            android:id="@+id/text_field_four"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/edit_field_three"
+            android:text="@string/field_four"
+            android:textSize="15sp" />
+
+        <EditText
+            android:id="@+id/edit_field_four"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_field_four" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="@string/record_data_button"
+            android:textSize="20sp" />
+
+    </RelativeLayout>
 
 </FrameLayout>
