Moved sync data from navDrawer to action bar.

--- a/SCOUTr/app/src/main/res/menu/main.xml
+++ b/SCOUTr/app/src/main/res/menu/main.xml
@@ -6,4 +6,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_sync_data"
+        android:icon="@drawable/ic_sync_white_18dp"
+        android:title="@string/sync_data"
+        app:showAsAction="always" />
 </menu>
