--- a/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_set_up_new_tournament.xml
@@ -1,6 +1,6 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/recycler_view"
+    android:id="@+id/set_up_new_tournament_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="comcsse483.github.scoutr.fragments.SetUpNewTournamentFragment" />
