--- a/SCOUTr/app/src/main/res/layout/fragment_view_match_list.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_view_match_list.xml
@@ -1,5 +1,6 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_match_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ViewDataFragment">
