--- a/SCOUTr/app/src/main/res/layout/data_entry_layout.xml
+++ b/SCOUTr/app/src/main/res/layout/data_entry_layout.xml
@@ -13,5 +13,12 @@
         android:id="@+id/data_entry_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/data_entry_text_view" />
+        android:layout_below="@+id/data_entry_text_view"
+        android:inputType="numberDecimal" />
+
+    <CheckBox
+        android:id="@+id/data_entry_check_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/data_entry_text_view" />
 </RelativeLayout>
