--- a/SCOUTr/app/src/main/res/layout/test_db_read_row_layout.xml
+++ b/SCOUTr/app/src/main/res/layout/test_db_read_row_layout.xml
@@ -9,8 +9,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
-            android:id="Shot percentage"
+            android:text="Shot percentage"
             android:layout_column="0" />
 
         <TextView
