--- a/SCOUTr/app/src/main/res/layout/test_db_read_row_layout.xml
+++ b/SCOUTr/app/src/main/res/layout/test_db_read_row_layout.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="4dp"
+    card_view:cardCornerRadius="8dp">
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
@@ -88,3 +94,4 @@
             android:layout_margin="5dp" />
     </TableRow>
 </TableLayout>
+</android.support.v7.widget.CardView>
