Completed record data fragment. Export data method returns dataContainer filled with recorded data.

--- a/SCOUTr/app/src/main/res/values/colors.xml
+++ b/SCOUTr/app/src/main/res/values/colors.xml
@@ -10,7 +10,7 @@
     <color name="light_blue">#220000ff</color>
     <color name="lighter_blue">#110000ff</color>
     <color name="blue">#00F</color>
-    <color name="red">#F00</color>
+    <color name="red">#ef5350</color>
 
 
 </resources>
