--- a/SCOUTr/app/src/main/res/layout/fragment_sync_data.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_sync_data.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="comcsse483.github.scoutr.fragments.SyncDataFragment">
+    tools:context=".fragments.SyncDataDialogFragment">
 
     <RadioGroup
         android:layout_width="match_parent"
