--- a/SCOUTr/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SCOUTr/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,9 +11,9 @@
         <!--<item-->
         <!--android:id="@+id/nav_record_data"-->
         <!--android:title="@string/record_data" />-->
-        <item
-            android:id="@+id/nav_test_data"
-            android:title="@string/test_data" />
+        <!--<item-->
+            <!--android:id="@+id/nav_test_data"-->
+            <!--android:title="@string/test_data" />-->
         <item
         android:id="@+id/nav_view_data"
         android:title="@string/view_data" />
