--- a/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
+++ b/SCOUTr/app/src/main/res/layout/fragment_record_data.xml
@@ -15,17 +15,18 @@
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />
 
     <android.support.v7.widget.RecyclerView
-        android:paddingTop="5dp"
         android:id="@+id/record_data_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="80" />
+        android:layout_weight="80"
+        android:paddingTop="5dp" />
 
     <Button
         android:id="@+id/record_data_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="10"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="4"
         android:background="@color/red"
         android:text="@string/record_data_button" />
 
