--- a/SCOUTr/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SCOUTr/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,9 +5,9 @@
         <item
             android:id="@+id/nav_status"
             android:title="@string/status" />
-        <item
-            android:id="@+id/nav_set_up_new_tournament"
-            android:title="@string/set_up_new_tournament" />
+        <!--<item-->
+            <!--android:id="@+id/nav_set_up_new_tournament"-->
+            <!--android:title="@string/set_up_new_tournament" />-->
         <!--<item-->
         <!--android:id="@+id/nav_record_data"-->
         <!--android:title="@string/record_data" />-->
