--- a/SCOUTr/app/src/main/res/menu/main.xml
+++ b/SCOUTr/app/src/main/res/menu/main.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_set_up_new_tournament"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/set_up_new_tournament"
         app:showAsAction="never" />
 
     <item
